src/views/blog/show/style.css
.blog__container {
  display: flex;
  gap: 60px;
  position: relative;
}

.blog__header {
  border-bottom: solid var(--foreground) 2px;
}

.blog__tags {
  display: flex;
  align-items: center;
  gap: 10px;
  padding: 10px 0;
}

.blog__tags-title {
  font-size: 10pt;
  text-transform: uppercase;
  font-weight: 600;
}

.blog__tag-list {
  display: flex;
  gap: 5px;
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.blog__toc {
  position: sticky;
  top: 30px;
  align-self: flex-start;
  margin-top: 30px;
}

.blog__toc a {
  color: var(--half);
  text-decoration: none;
}

.blog__toc a.active, .blog__toc a:hover {
  color: var(--foreground);
  text-decoration: none;
}

.blog__toc ul {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.blog__toc ul ul {
  margin-left: 10px;
}

.blog__body {
  max-width: 620px;
  width: 100%;
}

.blog__body p {
  text-wrap: pretty;
  line-height: 1.4;
}

.blog__body pre {
  padding: 20px;
  border-radius: 6px;
}

.blog__body pre > code {
  position: relative;
  display: block;
  overflow-x: auto;
}

.blog__body code {
  background-color: var(--light);
  padding: 0.2em 0.4em;
  border-radius: 6px;
  white-space: break-spaces;
}

.blog__body .youtube {
  width: 100%;
  aspect-ratio: 560 / 315;
}

.blog__body img {
  width: 100%;
  max-width: 100%;
}

.blog__body figure {
  margin: 16px 0;
}

.blog__body figcaption {
  font-style: italic;
  font-size: 10pt;
}

.blog__section {
  scroll-margin-top: 20px;
}

.blog__heading {
  position: relative;
}

.blog__heading a {
  position: absolute;
  top: 50%;
  left: 0;
  transform: translateX(calc(-100% - 5px)) translateY(-50%);
  color: var(--foreground);
  text-decoration: none;
  opacity: 0;
  transition: opacity 0.3s;
}

.blog__heading:hover a,
.blog__heading:hover a,
.blog__heading:hover a,
.blog__heading:hover a,
.blog__heading:hover a {
  opacity: 0.75;
}

@media (max-width: 900px) {
  .page-title {
    margin-top: 0;
    font-size: 22pt;
  }

  .blog__toc {
    display: none;
  }

  .blog__header {
    margin-top: 20px;
  }
}

